--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "postcss-simple-vars": "^5.0.0",
     "precss": "^4.0.0",
     "source-map-explorer": "^2.0.1"
+  },
+  "dependencies": {
+    "eosjs": "^20.0.0",
+    "react-flip-numbers": "^3.0.4",
+    "react-select": "^3.0.4"
   }
 }
