--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "eosjs": "^20.0.0",
     "react-flip-numbers": "^3.0.4",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "bignumber.js": "^8.1.1"
   }
 }
